--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -10,7 +10,7 @@
             @include grid-child(1, 7, 1, 4);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
         }
@@ -18,8 +18,14 @@
         .item {
             margin-top: 4rem;
 
+            @include for-iphone {
+                background: #{'rgba(var(--white-rgb), 0.7)'};
+                padding: 0.375rem;
+                border-radius: 5px;
+                margin-bottom: 4rem;
+            }
 
-            @include for-iphone{
+            @include for-iphone-landscape {
                 background: #{'rgba(var(--white-rgb), 0.7)'};
                 padding: 0.375rem;
                 border-radius: 5px;
@@ -34,7 +40,12 @@
                     font-size: 2rem;
                 }
 
-                @include for-iphone{
+                @include for-iphone {
+                    font-size: 1.125rem;
+                    margin-bottom: 0.375rem;
+                }
+
+                @include for-iphone-landscape {
                     font-size: 1.125rem;
                     margin-bottom: 0.375rem;
                 }
@@ -45,6 +56,10 @@
                 letter-spacing: 0.15rem;
 
                 @include for-ipad-air {
+                    font-size: 0.875rem;
+                }
+
+                @include for-iphone-landscape {
                     font-size: 0.875rem;
                 }
             }
@@ -64,7 +79,7 @@
             @include grid-child(7, 13, 3, 4);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
             height: 80px;
@@ -114,7 +129,7 @@
             @include grid-child(7, 13, 1, 3);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
             height: 330px;
@@ -152,7 +167,7 @@
             @include grid-child(1, 7, 5, 7);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
             height: 240px;
@@ -218,7 +233,7 @@
             @include grid-child(7, 13, 5, 7);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
             height: 240px;
@@ -233,7 +248,7 @@
             @include grid-child(7, 10, 4, 4);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
         }
@@ -260,7 +275,7 @@
             @include grid-child(10, 13, 4, 4);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
         }
@@ -279,7 +294,7 @@
             @include grid-child(1, 7, 4, 5);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             grid-column: unset;
             grid-row: unset;
             height: 200px;
